--- a/docker-image/supervisor-service-script.conf
+++ b/docker-image/supervisor-service-script.conf
@@ -4,7 +4,7 @@
 nodaemon=true
 
 [program:skype-bridge]
-command=/opt/skype-rocketchat-bridge/skype_bot.sh skype-bridge
+command=python3 /opt/skype-rocketchat-bridge/skype-bridge.py
 autorestart=true
 stderr_logfile=/dev/stdout
 stderr_logfile_maxbytes = 0
@@ -12,7 +12,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes = 0
 
 [program:rocketchat-bridge]
-command=/opt/skype-rocketchat-bridge/skype_bot.sh rocketchat-bridge
+command=python3 /opt/skype-rocketchat-bridge/rocketchat-bridge.py
 autorestart=true
 stderr_logfile=/dev/stdout
 stderr_logfile_maxbytes = 0
