--- a/docker-image/Dockerfile
+++ b/docker-image/Dockerfile
@@ -12,5 +12,16 @@ RUN yum -y install python3-3.6.8 supervisor-3.4.0
 # Exposing container port for binding with host
 EXPOSE 5000
 
+RUN mkdir -p /opt/skype-rocketchat-bridge \
+  cd /opt/skype-rocketchat-bridge \
+  wget -O python-requirements.txt https://raw.githubusercontent.com/foongws/skype-rocketchat-bridge/master/docker-image/python-requirements.txt \
+  wget -O skype-bridge.py https://raw.githubusercontent.com/foongws/skype-rocketchat-bridge/master/skype-bridge.py \
+  wget -O rocketchat-bridge.py https://raw.githubusercontent.com/foongws/skype-rocketchat-bridge/master/rocketchat-bridge.py \
+  pip3 install -r python-requirements.txt \
+  pip3 install -e "git+https://github.com/Terrance/SkPy@live-login-fix#egg=skpy" \
+  mkdir -p /opt/supervisor \
+  cd /opt/supervisor \
+  wget -O supervisor-service-script.conf https://raw.githubusercontent.com/foongws/skype-rocketchat-bridge/master/docker-image/supervisor-service-script.conf
+
 # Initializing python script from supervisord
-CMD ["supervisord","-c","/src/supervisor/service_script.conf"]
+CMD ["supervisord","-c","/opt/supervisor/supervisor-service-script.conf"]
