--- a/docker-image/Dockerfile
+++ b/docker-image/Dockerfile
@@ -16,9 +16,7 @@ RUN mkdir -p /opt/skype-rocketchat-bridge \
   && wget -O rocketchat-bridge.py https://raw.githubusercontent.com/stevenfoong/skype-rocketchat-bridge/master/rocketchat-bridge.py \
   && pip3 install -r python-requirements.txt \
   && pip3 install -e "git+https://github.com/Terrance/SkPy@live-login-fix#egg=skpy" \
-  && mkdir -p /opt/supervisor \
-  && cd /opt/supervisor \
-  && wget -O supervisor-service-script.conf https://raw.githubusercontent.com/foongws/skype-rocketchat-bridge/master/docker-image/supervisor-service-script.conf
+  && wget -O /etc/supervisord.conf https://raw.githubusercontent.com/foongws/skype-rocketchat-bridge/master/docker-image/supervisor-service-script.conf
 
-# Initializing python script from supervisord
-CMD /usr/bin/supervisord -c /opt/supervisor/supervisor-service-script.conf
+CMD ["/usr/bin/supervisord"]
+
