--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
     ports:
       - 5000:5000
     environment:
-     - SKYPE_USERNAME="[skype username]"
-     - SKYPE_PASSWORD="[skype password]"
-     - SKYPE_BOT_ID="[skype bot ID]"
-     - SKYPE_BOT_SECRET="[skype bot secret token]"
-     - ROCKETCHAT_URL="[rocket chat webhook url]"
-     - ROCKETCHAT_API="[rocket chat api url]"
-     - ROCKETCHAT_DOMAIN="rocket chat domain"
-     - ROCKETCHAT_X_Auth_Token="[rocket chat bot token]"
-     - ROCKETCHAT_X_User_Id="[rocket chat bot id]"
+     - SKYPE_USERNAME=[skype username]
+     - SKYPE_PASSWORD=[skype password]
+     - SKYPE_BOT_ID=[skype bot ID]
+     - SKYPE_BOT_SECRET=[skype bot secret token]
+     - ROCKETCHAT_URL=[rocket chat webhook url]
+     - ROCKETCHAT_API=[rocket chat api url]
+     - ROCKETCHAT_DOMAIN=rocket chat domain
+     - ROCKETCHAT_X_Auth_Token=[rocket chat bot token]
+     - ROCKETCHAT_X_User_Id=[rocket chat bot id]
