--- a/docker-image/supervisor-service-script.conf
+++ b/docker-image/supervisor-service-script.conf
@@ -3,6 +3,11 @@
 [supervisord]
 nodaemon=true
 
+[unix_http_server]
+file = /tmp/supervisor.sock
+username = user
+password = 123
+
 [program:skype-bridge]
 command=python3 /opt/skype-rocketchat-bridge/skype-bridge.py
 autorestart=true
@@ -18,3 +23,8 @@ stderr_logfile=/dev/stdout
 stderr_logfile_maxbytes = 0
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes = 0
+
+[supervisorctl]
+serverurl = unix:///tmp/supervisor.sock
+username = user
+password = 123
