--- a/docker-image/supervisor-service-script.conf
+++ b/docker-image/supervisor-service-script.conf
@@ -9,6 +9,7 @@ username = user
 password = 123
 
 [program:skype-bridge]
+process_name=skype-bridge
 command=python3 /opt/skype-rocketchat-bridge/skype-bridge.py
 autorestart=true
 stderr_logfile=/dev/stdout
@@ -17,6 +18,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes = 0
 
 [program:rocketchat-bridge]
+process_name=rocketchat-bridge
 command=python3 /opt/skype-rocketchat-bridge/rocketchat-bridge.py
 autorestart=true
 stderr_logfile=/dev/stdout
@@ -28,3 +30,6 @@ stdout_logfile_maxbytes = 0
 serverurl = unix:///tmp/supervisor.sock
 username = user
 password = 123
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
