--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,5 @@ services:
      - ROCKETCHAT_DOMAIN=rocket chat domain
      - ROCKETCHAT_X_Auth_Token=[rocket chat bot token]
      - ROCKETCHAT_X_User_Id=[rocket chat bot id]
+    volumes:
+     - /data/skype-rocketchat-bridge:/opt/skype-rocketchat-bridge/data
