--- a/docker-image/Dockerfile
+++ b/docker-image/Dockerfile
@@ -17,6 +17,8 @@ RUN mkdir -p /opt/skype-rocketchat-bridge \
   && wget -O python-requirements.txt https://raw.githubusercontent.com/stevenfoong/skype-rocketchat-bridge/master/docker-image/python-requirements.txt \
   && wget -O skype-bridge.py https://raw.githubusercontent.com/stevenfoong/skype-rocketchat-bridge/master/skype-bridge.py \
   && wget -O rocketchat-bridge.py https://raw.githubusercontent.com/stevenfoong/skype-rocketchat-bridge/master/rocketchat-bridge.py \
+  && mkdir -p /opt/skype-rocketchat-bridge/data \
+  && cd /opt/skype-rocketchat-bridge/data \
   && wget -O channel.py https://raw.githubusercontent.com/stevenfoong/skype-rocketchat-bridge/master/channel.py \
   && pip3 install -r python-requirements.txt \
   && pip3 install -e "git+https://github.com/Terrance/SkPy@live-login-fix#egg=skpy" \
